[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-runner"
version = "0.1.0"
description = "Run LangChain/LangGraph agents autonomously with webhooks, cron, and HTTP triggers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tadata Inc" }
]
keywords = [
    "langchain",
    "langgraph",
    "agents",
    "webhooks",
    "cron",
    "automation",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
mcp = [
    "langchain-mcp-adapters>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
langchain-runner = "langchain_runner.cli:main"

[project.urls]
Homepage = "https://github.com/tadata-org/langchain-runner"
Repository = "https://github.com/tadata-org/langchain-runner"
Documentation = "https://github.com/tadata-org/langchain-runner#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_runner"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
